--- a/ProjectDiamondShop/Views/Home/ViewOrder.cshtml
+++ b/ProjectDiamondShop/Views/Home/ViewOrder.cshtml
@@ -15,137 +15,163 @@
     <link rel="stylesheet" href="~/Content/ViewOrder.css" />
 </head>
 <body>
-    <div class="container container-custom text-center">
-        <h2 class="mt-4 diamond-title">View Orders</h2>
+    <div class="container-fluid mt-5">
+        <div class="table-responsive">
 
-        <div class="nav-buttons mb-4">
-            <div class="btn-group">
-                <button type="button" class="btn btn-primary" onclick="showSection('currentOrders')">Current Orders</button>
-                <button type="button" class="btn btn-primary" onclick="showSection('orderHistory')">Order History</button>
-            </div>
-        </div>
+            <div class="container container-custom text-center">
+                <h2 class="mt-4 diamond-title">View Orders</h2>
 
-        <div id="currentOrders" class="section active">
-            <h3>Current Orders</h3>
-            <input type="text" id="searchCurrentOrders" class="form-control mb-3" onkeyup="searchTable('currentOrdersTable', 'searchCurrentOrders', 0)" placeholder="Search for orders by OrderID..">
-            <div class="table-container">
-                <table id="currentOrdersTable" class="table table-striped table-bordered table-dark">
-                    <thead>
-                        <tr>
-                            <th>Order ID</th>
-                            <th>Receiver</th>
-                            <th>Delivery Staff</th>
-                            <th>Paid Money</th>
-                            <th>Remaining Money</th>
-                            <th>Total Money</th>
-                            <th>Ship To</th>
-                            <th>Phone Number</th>
-                            <th>Status</th>
-                            <th>Warranty Code</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var order in Model.currentOrders)
-                        {
-                            <tr>
-                                <td>@order.orderID</td>
-                                <td>@order.customerName</td>
-                                <td>@order.deliveryStaffName</td>
-                                <td>$@String.Format("{0:N0}", order.paidAmount)</td>
-                                <td>$@String.Format("{0:N0}", order.remainingAmount)</td>
-                                <td>$@String.Format("{0:N0}", order.totalMoney)</td>
-                                <td>@order.address</td>
-                                <td>@order.phone</td>
-                                <td>@order.status</td>
-                                <td>
-                                    @{
-                                        var warrantyCodes = ViewBag.Warranties[order.orderID];
-                                        var warrantyCodesStr = string.Join(" || ", warrantyCodes);
-                                    }
-                                    @warrantyCodesStr
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("UpdateOrderDetails", "Order", new { orderId = order.orderID })" class="btn btn-info">View Order</a>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-            <div class="pagination-container">
-                <ul class="pagination">
-                    @for (int i = 1; i <= Math.Ceiling((double)ViewBag.TotalCurrentOrders / ViewBag.PageSize); i++)
-                    {
-                        <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
-                            <a class="page-link" href="@Url.Action("ViewOrders", new { page = i, pageSize = ViewBag.PageSize })">@i</a>
-                        </li>
-                    }
-                </ul>
-            </div>
-        </div>
+                <div class="nav-buttons mb-4">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary" onclick="showSection('currentOrders')">Current Orders</button>
+                        <button type="button" class="btn btn-primary" onclick="showSection('orderHistory')">Order History</button>
+                    </div>
+                </div>
 
-        <div id="orderHistory" class="section">
-            <h3>Order History</h3>
-            <input type="text" id="searchHistoryOrders" class="form-control mb-3" onkeyup="searchTable('historyOrdersTable', 'searchHistoryOrders', 0)" placeholder="Search for orders by OrderID..">
-            <div class="table-container">
-                <table id="historyOrdersTable" class="table table-striped table-bordered table-dark">
-                    <thead>
-                        <tr>
-                            <th>Order ID</th>
-                            <th>Receiver</th>
-                            <th>Delivery Staff</th>
-                            <th>Paid Money</th>
-                            <th>Remaining Money</th>
-                            <th>Total Money</th>
-                            <th>Ship To</th>
-                            <th>Phone Number</th>
-                            <th>Status</th>
-                            <th>Warranty Code</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var order in Model.historyOrder)
-                        {
-                            <tr>
-                                <td>@order.orderID</td>
-                                <td>@order.customerName</td>
-                                <td>@order.deliveryStaffName</td>
-                                <td>$@String.Format("{0:N0}", order.paidAmount)</td>
-                                <td>$@String.Format("{0:N0}", order.remainingAmount)</td>
-                                <td>$@String.Format("{0:N0}", order.totalMoney)</td>
-                                <td>@order.address</td>
-                                <td>@order.phone</td>
-                                <td>@order.status</td>
-                                <td>
-                                    @{
-                                        var warrantyCodes = ViewBag.Warranties[order.orderID];
-                                        var warrantyCodesStr = string.Join(" || ", warrantyCodes);
-                                    }
-                                    @warrantyCodesStr
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("UpdateOrderDetails", "Order", new { orderId = order.orderID })" class="btn btn-info">View Order</a>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-            <div class="pagination-container">
-                <ul class="pagination">
-                    @for (int i = 1; i <= Math.Ceiling((double)ViewBag.TotalHistoryOrders / ViewBag.PageSize); i++)
-                    {
-                        <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
-                            <a class="page-link" href="@Url.Action("ViewOrders", new { page = i, pageSize = ViewBag.PageSize })">@i</a>
-                        </li>
-                    }
-                </ul>
+                <div id="currentOrders" class="section active">
+                    <h3>Current Orders</h3>
+                    <input type="text" id="searchCurrentOrders" class="form-control mb-3" onkeyup="searchTable('currentOrdersTable', 'searchCurrentOrders', 0)" placeholder="Search for orders by OrderID..">
+                    <div class="table-container">
+                        <table id="currentOrdersTable" class="table table-striped table-bordered table-dark">
+                            <thead>
+                                <tr>
+                                    <th>Order ID</th>
+                                    <th>Receiver</th>
+                                    <th>Delivery Staff</th>
+                                    <th>Paid Money</th>
+                                    <th>Remaining Money</th>
+                                    <th>Total Money</th>
+                                    <th>Ship To</th>
+                                    <th>Created Day</th>
+                                    <th>Phone Number</th>
+                                    <th>Status</th>
+                                    <th>Warranty Code</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var order in Model.currentOrders)
+                                {
+                                    <tr>
+                                        <td>@order.orderID</td>
+                                        <td>@order.customerName</td>
+                                        <td>@order.deliveryStaffName</td>
+                                        <td>$@String.Format("{0:N0}", order.paidAmount)</td>
+                                        <td>$@String.Format("{0:N0}", order.remainingAmount)</td>
+                                        <td>$@String.Format("{0:N0}", order.totalMoney)</td>
+                                        <td>@order.address</td>
+                                        <td>@order.saleDate</td>
+                                        <td>@order.phone</td>
+                                        <td>
+                                            <span class="@(order.status == "Order Placed" ? "status-order-placed" :
+                                              order.status == "Preparing Goods" ? "status-preparing-goods" :
+                                              order.status == "Shipped to Carrier" ? "status-shipped-to-carrier" :
+                                              order.status == "In Delivery" ? "status-in-delivery" :
+                                              order.status == "Delivered" ? "status-delivered" :
+                                              order.status == "Paid" ? "status-paid" : "")">
+                                                @order.status
+                                            </span>
+                                        </td>
+                                        <td>
+                                            @{
+                                                var warrantyCodes = ViewBag.Warranties[order.orderID];
+                                                var warrantyCodesStr = string.Join(" || ", warrantyCodes);
+                                            }
+                                            @warrantyCodesStr
+                                        </td>
+                                        <td>
+                                            <a href="@Url.Action("UpdateOrderDetails", "Order", new { orderId = order.orderID })" class="btn btn-info">View Order</a>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="pagination-container">
+                        <ul class="pagination">
+                            @for (int i = 1; i <= Math.Ceiling((double)ViewBag.TotalCurrentOrders / ViewBag.PageSize); i++)
+                            {
+                                <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
+                                    <a class="page-link" href="@Url.Action("ViewOrders", new { page = i, pageSize = ViewBag.PageSize })">@i</a>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+
+                <div id="orderHistory" class="section">
+                    <h3>Order History</h3>
+                    <input type="text" id="searchHistoryOrders" class="form-control mb-3" onkeyup="searchTable('historyOrdersTable', 'searchHistoryOrders', 0)" placeholder="Search for orders by OrderID..">
+                    <div class="table-container">
+                        <table id="historyOrdersTable" class="table table-striped table-bordered table-dark">
+                            <thead>
+                                <tr>
+                                    <th>Order ID</th>
+                                    <th>Receiver</th>
+                                    <th>Delivery Staff</th>
+                                    <th>Paid Money</th>
+                                    <th>Remaining Money</th>
+                                    <th>Total Money</th>
+                                    <th>Ship To</th>
+                                    <th>Created Day</th>
+                                    <th>Phone Number</th>
+                                    <th>Status</th>
+                                    <th>Warranty Code</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var order in Model.historyOrder)
+                                {
+                                    <tr>
+                                        <td>@order.orderID</td>
+                                        <td>@order.customerName</td>
+                                        <td>@order.deliveryStaffName</td>
+                                        <td>$@String.Format("{0:N0}", order.paidAmount)</td>
+                                        <td>$@String.Format("{0:N0}", order.remainingAmount)</td>
+                                        <td>$@String.Format("{0:N0}", order.totalMoney)</td>
+                                        <td>@order.address</td>
+                                        <td>@order.saleDate</td>
+                                        <td>@order.phone</td>
+                                        <td>
+                                            <span class="@(order.status == "Order Placed" ? "status-order-placed" :
+                                    order.status == "Preparing Goods" ? "status-preparing-goods" :
+                                    order.status == "Shipped to Carrier" ? "status-shipped-to-carrier" :
+                                    order.status == "In Delivery" ? "status-in-delivery" :
+                                    order.status == "Delivered" ? "status-delivered" :
+                                    order.status == "Paid" ? "status-paid" : "")">
+                                                @order.status
+                                            </span>
+                                        </td>
+                                        <td>
+                                            @{
+                                                var warrantyCodes = ViewBag.Warranties[order.orderID];
+                                                var warrantyCodesStr = string.Join(" || ", warrantyCodes);
+                                            }
+                                            @warrantyCodesStr
+                                        </td>
+                                        <td>
+                                            <a href="@Url.Action("UpdateOrderDetails", "Order", new { orderId = order.orderID })" class="btn btn-info">View Order</a>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="pagination-container">
+                        <ul class="pagination">
+                            @for (int i = 1; i <= Math.Ceiling((double)ViewBag.TotalHistoryOrders / ViewBag.PageSize); i++)
+                            {
+                                <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
+                                    <a class="page-link" href="@Url.Action("ViewOrders", new { page = i, pageSize = ViewBag.PageSize })">@i</a>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
     <script>
         function showSection(sectionId) {
             var sections = document.getElementsByClassName('section');
