--- a/ProjectDiamondShop/Views/Order/UpdateOrderDetails.cshtml
+++ b/ProjectDiamondShop/Views/Order/UpdateOrderDetails.cshtml
@@ -10,8 +10,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Order Details and Update Status</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.6.1/nouislider.min.css" />
     <link rel="stylesheet" href="~/Content/Order/UpdateOrderDetails.css" />
 </head>
 <body>
@@ -20,7 +22,6 @@
     {
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-
                 <a class="navbar-brand" href="#">
                     <img src="/Image/HomePage/Logo/Hand with crystal_ Mystical, esoteric, magic or healing crystal_.jpg" alt="The Diamond Shop" height="40">
                     <span>The Diamond Shop</span>
@@ -34,7 +35,7 @@
                             <a class="nav-link" href="@Url.Action("Index", "Home")">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("About", "Home")">About</a>
+                            <a class="nav-link" href="@Url.Action("About","Home")">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.facebook.com/profile.php?id=61561345894731" target="_blank">Contact Us</a>
@@ -198,11 +199,14 @@
                                 {
 
 
-                                <th>Remaining Money</th>
+                                    <th>Remaining Money</th>
                                 }
-                                else {<th>Payment Status</th> }
+                                else
+                                {
+                                    <th>Payment Status</th>
                                 }
-                            
+                            }
+
                             <th>Total Money</th>
                             <th>Ship To</th>
                             <th>Phone Number</th>
@@ -314,6 +318,9 @@
         </div>
     </div>
 
+
+
+
     <div class="modal fade" id="loginSuccessModal" tabindex="-1" role="dialog" aria-labelledby="loginSuccessModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -389,30 +396,105 @@
         </div>
     </footer>
 
-    <script>
-        function showPolicyModal() {
-            var policyModal = new bootstrap.Modal(document.getElementById('policyModal'));
-            policyModal.show();
-        }
-        function confirmPolicy() {
-            var acceptPolicy = document.getElementById("acceptPolicy").checked;
-            if (acceptPolicy) {
-                var policyModal = bootstrap.Modal.getInstance(document.getElementById('policyModal'));
-                policyModal.hide();
-                validateForm();
-            } else {
-                alert("You must accept the policy to continue.");
-            }
-        }
-        function validateForm() {
-            document.getElementById("paymentForm").submit();
-        }
-    </script>
+    
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            // Fetch notification count
+            function fetchNotificationCount() {
+                $.ajax({
+                    url: '@Url.Action("GetUnreadNotificationCount", "Notification")',
+                    type: 'GET',
+                    success: function (response) {
+                        if (response.success) {
+                            var notificationCount = response.unreadCount;
+                            if (notificationCount > 0) {
+                                $('#notificationCount').text(notificationCount);
+                            } else {
+                                $('#notificationCount').text('');
+                            }
+                        } else {
+                            console.log(response.message);
+                        }
+                    },
+                    error: function () {
+                        console.log('Error retrieving notification count.');
+                    }
+                });
+            }
+
+            // Fetch notifications
+            function fetchNotifications() {
+                $.ajax({
+                    url: '@Url.Action("GetNotifications", "Notification")',
+                    type: 'GET',
+                    success: function (response) {
+                        if (response.success) {
+                            var notificationList = $('#notificationList');
+                            notificationList.empty();
+                            response.notifications.forEach(function (notification) {
+                                var item = '<div class="notification-item">' +
+                                    '<i class="fas fa-exclamation-circle icon"></i>' +
+                                    '<div class="notification-content">' +
+                                    '<strong>' + notification.detail + '</strong>' +
+                                    '<small>' + notification.date + '</small>' +
+                                    '</div>' +
+                                    '</div>';
+                                notificationList.prepend(item);
+                            });
+                            $('#notificationsModal').modal('show');
+                            markAllNotificationsAsRead();
+                        } else {
+                            alert(response.message);
+                        }
+                    },
+                    error: function () {
+                        alert('Error retrieving notifications.');
+                    }
+                });
+            }
+
+            // Mark all notifications as read
+            function markAllNotificationsAsRead() {
+                $.ajax({
+                    url: '@Url.Action("MarkAllAsRead", "Notification")',
+                    type: 'POST',
+                    success: function (response) {
+                        if (response.success) {
+                            $('#notificationCount').text('');
+                        } else {
+                            console.log(response.message);
+                        }
+                    },
+                    error: function () {
+                        console.log('Error marking notifications as read.');
+                    }
+                });
+            }
+
+            // Initial fetch
+            fetchNotificationCount();
+
+            // Handle bell icon click
+            $('#notificationBell').click(function () {
+                fetchNotifications();
+            });
+
+            // Poll for new notifications every 60 seconds
+            setInterval(fetchNotificationCount, 60000);
+
+            // Handle modal close actions
+            $('#notificationsModal').on('hidden.bs.modal', function () {
+                markAllNotificationsAsRead();
+            });
+        });
+    </script>
 </body>
 </html>
