--- a/ProjectDiamondShop/Views/Warranty/WarrantyDetails.cshtml
+++ b/ProjectDiamondShop/Views/Warranty/WarrantyDetails.cshtml
@@ -128,7 +128,7 @@
                                 <li><a class="dropdown-item" href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("WarrantyDetails", "Warranty")">Warranty</a></li>
-                                <li><a class="dropdown-item" href="@Url.Action("Logout", "Login")">Logout</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("Logout", "Account")">Logout</a></li>
                             </ul>
                         </li>
                         <li class="nav-item notification-bell">
